# PHENIX-OnlMon

./: README.md
online/monitoring/Run3/: Makefile.am  configure.in
online/monitoring/Run3/client/: Makefile.am  OnlMonClient.C  OnlMonHtml.C  configure.in
online/monitoring/Run3/database/: Makefile.am  OnCalDBodbc.C  OnlMonDB.C  OnlMonDBodbc.C  RunDBodbc.C  configure.in
online/monitoring/Run3/macros/: .psrc  CommonFuncs.C  ServerFuncs.C  daqoperator.C  display_loop.C  htmlfuncs.C  makehtml.C  pisafile.dat.cZ  run_Poms.C  run_Poms.C.README  run_acc.C  run_bbc.C  run_bbclvl1.C  run_daq.C  run_dch.C  run_emcal.C  run_ert.C  run_ertlvl1.C  run_example.C  run_fcal.C  run_fvtx.C  run_gl1.C  run_localpol.C  run_lvl2.C  run_mcr.C  run_mpc.C  run_mpcex.C  run_mui.C  run_muidlvl1.C  run_mutr.C  run_mutrg.C  run_mutriglvl1.C  run_pad.C  run_pbglu.C  run_pktsize.C  run_reco.C  run_rich.C  run_rich_expert.C  run_rpc.C  run_rpctiming.C  (+10 more)
online/monitoring/Run3/poms/: Makefile.am  Poms.C  Poms.h  PomsLinkDef.h
online/monitoring/Run3/scripts/: Change_menu.pl  Clean_menu.pl  DataSize.pl  LocateRemoveLog.pl  Makefile.am  OnlMonDisplay.csh  Tar_histo_files.pl  boxDisksWatcher.pl  check_html_runtype.pl  combine_menu.pl  makehtml.csh  monitorWatcher.pl  monserver.csh  overhead.cmd  restart_html.sh  restart_monitor_pool.sh  runallfiles.csh  safe_delete.pl  submit_all.sh  svxPISA.par  va.list  va034.phenix.bnl.gov.1.cmd  va034.phenix.bnl.gov.2.cmd  va034.phenix.bnl.gov.3.cmd  va034.phenix.bnl.gov.4.cmd  va035.phenix.bnl.gov.1.cmd  va035.phenix.bnl.gov.2.cmd  va035.phenix.bnl.gov.3.cmd  va035.phenix.bnl.gov.4.cmd  va036.phenix.bnl.gov.1.cmd  va036.phenix.bnl.gov.2.cmd  va036.phenix.bnl.gov.3.cmd  va036.phenix.bnl.gov.4.cmd  va037.phenix.bnl.gov.1.cmd  va037.phenix.bnl.gov.2.cmd  va037.phenix.bnl.gov.3.cmd  va037.phenix.bnl.gov.4.cmd  va038.phenix.bnl.gov.1.cmd  va038.phenix.bnl.gov.2.cmd  va038.phenix.bnl.gov.3.cmd  (+15 more)
online/monitoring/Run3/scripts/et/: README  et_remove_unused_stations.csh  etpool  start_et.csh  stop_et.sh
online/monitoring/Run3/server/: Makefile.am  OnlMonServer.C  OnlMonStatusDB.C  OnlMonTrigger.h  configure.in  corba_msg_buffer.C  corba_msg_buffer.h  corba_msg_bufferLinkDef.h  pmonitorInterface.C
online/monitoring/Run3/subsystems/: Makefile.am
online/monitoring/Run3/subsystems/Example/: MyMon.C  MyMonDraw.C  MyMonDraw.h  configure.in
online/monitoring/Run3/subsystems/acc/: ACCMon.C  ACCMon.h  ACCMonDefs.h  ACCMonDraw.C  ACCMonDraw.h  ACCMonLinkDef.h  AccGeom.C  AccGeom.h  CalibrationsRead.C  CalibrationsRead.h  CrkCal.cc  CrkCal.h  GetAccPmtData.C  GetAccPmtData.h  Makefile.am  configure.in
online/monitoring/Run3/subsystems/bbc/: BbcMon.C  BbcMon.h  BbcMonDefs.h  BbcMonDraw.C  BbcMonDraw.h  BbcMonLinkDef.h  BbcSetup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/bbclvl1/: BbcLUT.cc  BbcLUT.h  BbcLl1.C  BbcLl1.h  BbcLvl1Mon.C  BbcLvl1Mon.h  BbcLvl1MonDraw.C  BbcLvl1MonDraw.h  BbcLvl1MonLinkDef.h  BbcLvl1MsgTypes.h  Makefile.am  configure.in
online/monitoring/Run3/subsystems/daq/: DaqAccMon.C  DaqAccMon.h  DaqBbcMon.C  DaqBbcMon.h  DaqDchMon.C  DaqDchMon.h  DaqEmcMon.C  DaqEmcMon.h  DaqErtMon.C  DaqErtMon.h  DaqFcalMon.C  DaqFcalMon.h  DaqFvtxMon.C  DaqFvtxMon.h  DaqGl1Mon.C  DaqGl1Mon.h  DaqHistoBinDefs.h  DaqMon.C  DaqMon.h  DaqMonDraw.C  DaqMonDraw.h  DaqMonDrawLinkDef.h  DaqMonLinkDef.h  DaqMpcExMon.C  DaqMpcExMon.h  DaqMpcMon.C  DaqMpcMon.h  DaqMuTrigMon.C  DaqMuTrigMon.h  DaqMuidMon.C  DaqMuidMon.h  DaqMutrMon.C  DaqMutrMon.h  DaqPadMon.C  DaqPadMon.h  DaqRichMon.C  DaqRichMon.h  DaqRpcMon.C  DaqRpcMon.h  DaqTofMon.C  (+21 more)
online/monitoring/Run3/subsystems/dch/: DchMon.C  DchMon.h  DchMonDefs.h  DchMonDraw.C  DchMonDraw.h  DchMonLinkDef.h  DchSetup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/emc/: EMCalMon.C  EMCalMon.h  EMCalMonDraw.C  EMCalMonDraw.h  EMCalMonLinkDef.h  EmcAnalys.C  EmcAnalys.h  EmcClusterReco.C  EmcClusterReco.h  EmcSetup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/ert/: EMCalRichDecodeOnline.C  EMCalRichDecodeOnline.h  ERTMaskMon.C  ERTMaskMon.h  ERTMaskMonCommon.C  ERTMaskMonCommon.h  ERTMaskMonDraw.C  ERTMaskMonDraw.h  ERTMaskMonHisto.C  ERTMaskMonHisto.h  ERTMaskMonLinkDef.h  ERTMaskMonNHit.C  ERTMaskMonNHit.h  ERTMaskMonRFactor.C  ERTMaskMonRFactor.h  ErtSetup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/ertlvl1/: ERTLl1.C  ERTLl1.h  ErtLvl1Mon.C  ErtLvl1Mon.h  ErtLvl1MonDefs.h  ErtLvl1MonDraw.C  ErtLvl1MonDraw.h  ErtLvl1MonLinkDef.h  Makefile.am  configure.in  convert_lut.C  emc_rich_map_E.fpga  emc_rich_map_W.fpga  lut_ert0.fpga.plusmin_0.9GeV  lut_ert0.fpga.plusplus_0.9GeV  lut_ert0.fpga.plusplus_1.20GeV  lut_ert1.fpga.plusmin_0.9GeV  lut_ert1.fpga.plusplus_0.9GeV  lut_ert1.fpga.plusplus_1.20GeV  lut_rich2e.fpga  roc_map_E.fpga  roc_map_W.fpga
online/monitoring/Run3/subsystems/fcal/: FcalMon.C  FcalMon.h  FcalMonDraw.C  FcalMonDraw.h  FcalMonLinkDef.h  FcalSetup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/fvtx/: FvtxMon.C  FvtxMon.h  FvtxMonConsts.h  FvtxMonDraw.C  FvtxMonDraw.h  FvtxMonDrawConsts.h  FvtxMonLinkDef.h  FvtxOnlineChannel.cc  FvtxOnlineChannel.hh  FvtxSetup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/gl1/: Gl1Mon.C  Gl1Mon.h  Gl1MonDraw.C  Gl1MonDraw.h  Gl1MonLinkDef.h  Gl1Setup.csh  Makefile.am  configure.in
online/monitoring/Run3/subsystems/mcr/: Makefile.am  McrMon.C  McrMon.h  McrMonDraw.C  McrMonDraw.h  McrMonHistoBinDefs.h  McrMonLinkDef.h  McrSend.C  McrSend.h  configure.in  vertexclient.cc
online/monitoring/Run3/subsystems/mpc/: Makefile.am  MpcMon.C  MpcMon.h  MpcMonConsts.h  MpcMonDraw.C  MpcMonDraw.h  MpcMonLinkDef.h  MpcSetup.csh  configure.in
online/monitoring/Run3/subsystems/mpcex/: Makefile.am  MpcExCalib.C  MpcExCalib.h  MpcExConst.h  MpcExMon.C  MpcExMon.h  MpcExMonDraw.C  MpcExMonDraw.h  MpcExMonLinkDef.h  MpcExSetup.csh  MpcExUnpackPRDFBase.C  MpcExUnpackPRDFBase.h  configure.in
online/monitoring/Run3/utils/: Makefile.am  runtype.C  xname.c
(+375 files in other folders)
