AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AM_INIT_AUTOMAKE(ONLINEMONITOR, 3.00)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
LT_INIT

INSTALL="/usr/bin/install -D -p"

dnl   no point in suppressing warnings people should 
dnl   at least see them, so here we go for g++: -Wall
if test $ac_cv_cxx_compiler_gnu = yes; then
dnl  CXXFLAGS="$CXXFLAGS -Wall"
  CXXFLAGS="$CXXFLAGS -ggdb3 -Wall -Werror"
fi

ROOTLIBS="`$ROOTSYS/bin/root-config --glibs`"
AC_SUBST(ROOTLIBS)

dnl PLEASE USE ALPHABETICAL ORDER FOR THE MAKEFILE LIST
dnl otherwise noone will be able to find your system
AC_CONFIG_FILES([Makefile 
client/Makefile 
database/Makefile 
poms/Makefile 
scripts/Makefile 
server/Makefile 
subsystems/Makefile 
subsystems/Example/Makefile 
subsystems/Example/calib/Makefile 
subsystems/acc/Makefile 
subsystems/acc/calib/Makefile 
subsystems/bbc/Makefile 
subsystems/bbc/calib/Makefile 
subsystems/bbclvl1/Makefile 
subsystems/daq/Makefile 
subsystems/dch/Makefile 
subsystems/dch/dch_files/Makefile 
subsystems/emc/Makefile 
subsystems/emc/conf/Makefile 
subsystems/emc/ref/Makefile 
subsystems/ert/Makefile 
subsystems/ert/calib/Makefile 
subsystems/ertlvl1/Makefile 
subsystems/fvtx/Makefile 
subsystems/fvtx/calib/Makefile 
subsystems/gl1/Makefile 
subsystems/gl1/calib/Makefile 
subsystems/mcr/Makefile 
subsystems/mpc/Makefile 
subsystems/mpc/calib/Makefile 
subsystems/mpcex/Makefile 
subsystems/mpcex/calib/Makefile 
subsystems/muid/Makefile  
subsystems/muid/calib/Makefile 
subsystems/muidlvl1/Makefile 
subsystems/mutr/Makefile 
subsystems/mutr/calib/Makefile 
subsystems/pad/Makefile 
subsystems/pad/calib/Makefile 
subsystems/pbgl/Makefile 
subsystems/pktsize/Makefile 
subsystems/reco/Makefile 
subsystems/rich/Makefile 
subsystems/rich/calib/Makefile 
subsystems/svxpixel/Makefile
subsystems/svxpixel/calib/Makefile
subsystems/svxstrip/Makefile
subsystems/svxstrip/calib/Makefile
subsystems/svxvertex/Makefile
subsystems/svxvertex/calib/Makefile
subsystems/tof/Makefile 
subsystems/tof/calib/Makefile 
subsystems/tofw/Makefile 
subsystems/zdc/Makefile 
subsystems/zdclvl1/Makefile 
subsystems/zdc/calib/Makefile 
utils/Makefile])
AC_OUTPUT
