AUTOMAKE_OPTIONS = foreign

include_HEADERS =

### USE ALPHABETICAL ORDER FOR MAKEFILE LIST
### Ert needs to be build after rich so it 
### is at the end of this list
###
SUBDIRS = \
  Example \
  acc \
  bbc \
  bbclvl1 \
  daq \
  dch \
  emc \
  ertlvl1 \
  fvtx \
  gl1 \
  mcr \
  mpc \
  mpcex \
  muid \
  muidlvl1 \
  mutr \
  pad \
  pbgl \
  pktsize \
  reco \
  rich \
  svxpixel \
  svxstrip \
  svxvertex \
  tof \
  tofw \
  zdc \
  zdclvl1 \
  ert
