AUTOMAKE_OPTIONS = foreign

include_HEADERS =

dist_data_DATA = \
  BbcCalib.adc \
  BbcCalib.config \
  BbcCalib.offset \
  BbcCalib.overflow0 \
  BbcCalib.overflow1 \
  BbcCalib.pedestal \
  BbcCalib.pmtgain \
  BbcCalib.slewpar0 \
  BbcCalib.slewpar1 \
  BbcCalib.tdc0 \
  BbcCalib.tdc1 \
  BbcCalib.tzero
