AUTOMAKE_OPTIONS = foreign

include_HEADERS =

dist_data_DATA = \
 led.ref \
 lednum.cut \
 mpcmon.cfg \
 MpcCal.map \
 MpcCal.ped \
 MpcCal.gains \
 MpcCal.hilolimit \
 MpcCal.hiloratio \
 MpcCal.hipostped \
 MpcCal.hipreped \
 MpcCal.leastcount \
 MpcCal.lopostped \
 MpcCal.lopreped \
 MpcCal.overflow \
 MpcCal.slewcor \
 MpcCal.gaincorr \
 MpcCal.t0
