AUTOMAKE_OPTIONS = foreign

include_HEADERS =

dist_data_DATA = \
  svxPISA_Run14AuAu200_dchp2_v8.par \
  blank_pixel_refmap.txt \
  pixel_deadmap_run14auau200_run407951.dat \
  run407951_strip_hotdeadChannels.txt \
  run407951_strip_hotdeadReadouts.txt \
  chip_deadmap_run14auau200_run407951.dat \
  threshold.h 
