AUTOMAKE_OPTIONS = foreign

include_HEADERS =

dist_data_DATA = \
  tofcablemap.txt \
  tofElossConv.txt \
  toffemmap.txt \
  tofGlobalT.txt \
  tofKnownDeadSlat.conf \
  tofpanelgeo.txt \
  tofPedestal.txt \
  tofQvcConv.txt \
  tofslatoffset.txt \
  tofSlewPar.txt \
  tofToffset.txt \
  tofTvcConv.txt \
  tofVelocity.txt \
  tofYoffset.txt

