AUTOMAKE_OPTIONS = foreign

include_HEADERS =

dist_data_DATA = \
  ZdcCalib.adc \
  ZdcCalib.overflow0 \
  ZdcCalib.overflow1 \
  ZdcCalib.pedestal \
  ZdcCalib.pmtgain \
  ZdcCalib.slewpar0 \
  ZdcCalib.slewpar1 \
  ZdcCalib.smdoffset \
  ZdcCalib.tdc0 \
  ZdcCalib.tdc0lut \
  ZdcCalib.tdc1 \
  ZdcCalib.tdc1lut \
  ZdcCalib.tzero \
  ZdcCalib.zvtx
